<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>
        <variable
            name="bookinfo"
            type="io.github.lamprose.bookshell.network.entity.BookInfoBean" />
        <variable
            name="isLend"
            type="Boolean" />
        <variable
            name="lendVisible"
            type="Boolean" />
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_book"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:title="书籍详情"
            app:titleTextColor="@color/white" />
        <LinearLayout
            android:id="@+id/book_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar_book"
            android:layout_margin="@dimen/dp_10"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="@dimen/dp_60"
                android:layout_height="@dimen/dp_100"
                app:url="@{bookinfo.coverImg}" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{bookinfo.title}"
                    tools:text="@string/app_name"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{bookinfo.summary}"
                    tools:text="@string/bottom_sheet_behavior"/>
                <Button
                    android:id="@+id/book_lend_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/return_book"
                    android:visibility="visible"
                    tools:text="@string/action_sign_in"/>
            </LinearLayout>
        </LinearLayout>
        <com.scwang.smart.refresh.layout.SmartRefreshLayout
            android:id="@+id/book_refreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/book_detail">
            <com.scwang.smart.refresh.header.ClassicsHeader
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                style="@style/AppTheme.CommonBar.Content.Value"
                android:id="@+id/book_handwriting_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/handwriting" />
            <androidx.recyclerview.widget.RecyclerView
                android:layout_below="@id/book_handwriting_text"
                android:id="@+id/book_handwriting_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </com.scwang.smart.refresh.layout.SmartRefreshLayout>

        <EditText
            android:id="@+id/book_comment_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:focusable="false"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>
</layout>
