<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="handwriting"
            type="io.github.lamprose.bookshell.network.entity.HandwritingBean" />
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_handwriting"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:title="笔迹详情"
            app:titleTextColor="@color/white" />
        <LinearLayout
            android:id="@+id/handwriting_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar_handwriting"
            android:layout_margin="@dimen/dp_10"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/dp_20"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="@dimen/dp_60"
                    android:layout_height="@dimen/dp_90"
                    android:layout_margin="@dimen/dp_10"
                    android:id="@id/handwriting_book_img"
                    app:url="@{handwriting.cover_img}"
                    android:contentDescription="TODO"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{handwriting.content}"
                    tools:text="@string/example_content"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginBottom="@dimen/dp_0"
                android:text="@{handwriting.time}"
                tools:text="@string/action_sign_in"/>
        </LinearLayout>
        <LinearLayout
            style="@style/AppTheme.CommonBar.Panel"
            android:background="@android:color/transparent"
            android:id="@+id/handwriting_key"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/dp_10"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/handwriting_detail"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="TODO" />
            <Button
                android:layout_width="wrap_content"
                android:id="@+id/handwriting_user_name"
                android:layout_height="@dimen/dp_18"
                android:drawablePadding="@dimen/dp_2"
                android:layout_gravity="start|center_vertical"
                android:gravity="center"
                android:textSize="10sp"
                android:background="@drawable/btn_selector"
                android:text="@{handwriting.userName}"
                tools:text="@string/example_username"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:id="@+id/handwriting_book_title"
                android:gravity="center"
                android:layout_marginEnd="@dimen/dp_2"
                android:layout_height="18dp"
                android:background="@drawable/btn_selector"
                android:text="@{handwriting.title}"
                android:textSize="10sp"
                tools:text="@string/example_signature"/>
        </LinearLayout>
        <LinearLayout style="@style/AppTheme.CommonBar.Panel"
            android:background="@color/colorDivision"
            android:id="@+id/handwriting_comment_title"
            android:layout_below="@id/handwriting_key"
            android:paddingTop="@dimen/division_line"
            android:paddingBottom="@dimen/division_line">
            <LinearLayout style="@style/AppTheme.CommonBar.Bar"
                android:background="@android:color/white"
                android:id="@+id/fmc_center_dynamic">
                <TextView style="@style/AppTheme.CommonBar.Content.Value"
                    android:text="@string/comment"/>
            </LinearLayout>
        </LinearLayout>
        <com.scwang.smart.refresh.layout.SmartRefreshLayout
            android:id="@+id/comment_refreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/handwriting_comment_title">
        <com.scwang.smart.refresh.header.ClassicsHeader
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/handwriting_comment"
                android:layout_margin="@dimen/dp_10"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"/>
        </com.scwang.smart.refresh.layout.SmartRefreshLayout>

        <EditText
            android:id="@+id/handwriting_comment_text"
            android:inputType="none"
            android:focusable="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:autofillHints=""
            tools:ignore="LabelFor" />
    </RelativeLayout>
</layout>
