<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="bookBean"
            type="io.github.lamprose.bookshell.network.entity.BookBean" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_home"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:title="发布书籍"
            app:titleTextColor="@color/white"
            tools:ignore="MissingConstraints" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dp_30"
            android:paddingTop="@dimen/fragment_vertical_margin"
            android:paddingRight="@dimen/dp_30"
            android:paddingBottom="@dimen/fragment_vertical_margin">

            <EditText
                android:id="@+id/share_isbn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="24dp"
                android:layout_marginTop="96dp"
                android:layout_marginEnd="24dp"

                android:hint="@string/prompt_isbn"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"
                android:text="@{bookBean.isbn}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/share_bookshelf_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"

                android:hint="@string/prompt_bookshelf_id"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:selectAllOnFocus="true"
                android:text="@{bookBean.bookShelfId.toString()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/share_isbn" />

            <ImageButton
                android:id="@+id/share_bookshelf_scan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_tab_search"
                android:layout_marginTop="@dimen/dp_13"
                app:layout_constraintRight_toRightOf="@id/share_bookshelf_id"
                app:layout_constraintTop_toTopOf="@id/share_bookshelf_id"/>

            <Button
                android:id="@+id/share_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="48dp"
                android:layout_marginBottom="64dp"
                android:text="@string/post_book"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/share_bookshelf_id"
                app:layout_constraintVertical_bias="0.2" />

            <ProgressBar
                android:id="@+id/share_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="32dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="64dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/share_bookshelf_id"
                app:layout_constraintStart_toStartOf="@id/share_bookshelf_id"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.3" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
