<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View"/>
        <variable
            name="user"
            type="io.github.lamprose.bookshell.network.entity.UserBean" />
        <variable
            name="isMine"
            type="Boolean" />
    </data>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        tools:context="io.github.lamprose.bookshell.ui.user.UserActivity">
        <ImageView
            android:id="@+id/parallax"
            android:layout_width="match_parent"
            android:layout_height="670dp"
            android:layout_marginTop="-300dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@mipmap/image_weibo_home_2"
            app:layout_collapseMode="parallax"/>
        <com.scwang.smart.refresh.layout.SmartRefreshLayout
            android:id="@+id/refreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srlEnablePreviewInEditMode="false">
            <com.scwang.smart.refresh.header.ClassicsHeader
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srlPrimaryColor="@android:color/transparent"
                app:srlAccentColor="@android:color/white"/>
            <androidx.core.widget.NestedScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:overScrollMode="never"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <com.google.android.material.appbar.CollapsingToolbarLayout
                            android:id="@+id/collapse"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:titleEnabled="false"
                            app:contentScrim="?attr/colorPrimary"
                            app:layout_scrollFlags="scroll|exitUntilCollapsed">
                            <RelativeLayout
                                android:id="@+id/panel_lyt"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="200dp"
                                android:orientation="vertical"
                                android:layout_gravity="bottom">
                                <RelativeLayout
                                    android:id="@+id/panel"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="40dp"
                                    android:paddingTop="@dimen/dimenPaddingVertical"
                                    android:paddingBottom="@dimen/dimenPaddingVertical"
                                    android:paddingLeft="@dimen/dimenPaddingHorizontal"
                                    android:paddingRight="@dimen/dimenPaddingHorizontal"
                                    android:background="@android:color/white">
                                    <Button
                                        style="@style/AppTheme.Label"
                                        android:id="@+id/attention"
                                        android:layout_alignParentEnd="true"
                                        android:layout_marginTop="0dp"
                                        android:paddingTop="8dp"
                                        android:paddingBottom="8dp"
                                        android:paddingLeft="25dp"
                                        android:paddingRight="25dp"
                                        android:visibility="@{isMine?View.VISIBLE:View.INVISIBLE}"
                                        android:text="@string/post_handwriting"
                                        android:textColor="@android:color/white" />
                                    <Button style="@style/AppTheme.Label"
                                        android:id="@+id/logout"
                                        android:layout_toStartOf="@id/attention"
                                        android:visibility="@{isMine?View.VISIBLE:View.INVISIBLE}"
                                        android:layout_marginTop="0dp"
                                        android:layout_marginRight="@dimen/dimenPaddingCommon"
                                        android:layout_marginLeft="@dimen/dimenPaddingCommon"
                                        android:paddingTop="8dp"
                                        android:paddingBottom="8dp"
                                        android:paddingLeft="25dp"
                                        android:paddingRight="25dp"
                                        android:textColor="@color/colorPrimary"
                                        android:text="@string/logout"/>
                                    <TextView
                                        style="@style/AppTheme.Label.Title"
                                        android:id="@+id/nickname"
                                        android:layout_below="@id/attention"
                                        android:text="@{user.userName??@string/example_username}"/>
                                    <TextView
                                        style="@style/AppTheme.Label.Description"
                                        android:id="@+id/signature"
                                        android:layout_below="@id/nickname"
                                        android:layout_marginTop="@dimen/dimenPaddingCommon"
                                        android:textColor="@color/colorTextAssistant"
                                        android:text="@{user.signature??@string/example_signature}" />
                                </RelativeLayout>
                                <ImageView
                                    android:id="@+id/avatar"
                                    android:layout_width="80dp"
                                    android:layout_height="80dp"
                                    android:layout_marginStart="@dimen/dimenPaddingCommon"
                                    android:src="@mipmap/image_avatar_5"
                                    android:contentDescription="头像" />
                                <View style="@style/AppTheme.Division"
                                    android:layout_alignParentBottom="true"/>
                            </RelativeLayout>

                        </com.google.android.material.appbar.CollapsingToolbarLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:background="@color/colorBackgroundDark"
                            android:paddingBottom="0dp"
                            app:layout_scrollFlags="scroll">
                            <LinearLayout style="@style/AppTheme.CommonBar.Panel"
                                android:background="@color/colorDivision"
                                android:paddingTop="@dimen/division_line"
                                android:paddingBottom="@dimen/division_line">
                                <LinearLayout style="@style/AppTheme.CommonBar.Bar"
                                    android:background="@android:color/white"
                                    android:id="@+id/fmc_center_dynamic">
                                    <TextView style="@style/AppTheme.CommonBar.Content.Value"
                                        android:text="@string/handwriting"/>
                                </LinearLayout>
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/activity_user_handwriting_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"/>
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </com.scwang.smart.refresh.layout.SmartRefreshLayout>
        <androidx.appcompat.widget.Toolbar
            style="@style/AppTheme.Toolbar"
            android:id="@+id/toolbar"
            android:background="@android:color/transparent"
            android:layout_marginBottom="0dp"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:layout_collapseMode="pin">
            <androidx.appcompat.widget.ButtonBarLayout
                android:id="@+id/buttonBarLayout"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content">
                <ImageView
                    android:id="@+id/toolbar_avatar"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginEnd="@dimen/dimenPaddingDiminutive"
                    android:src="@mipmap/image_avatar_5" />
                <TextView
                    android:id="@+id/title"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="16sp"
                    android:text="@{user.userName??@string/example_username}"/>
            </androidx.appcompat.widget.ButtonBarLayout>
        </androidx.appcompat.widget.Toolbar>
    </FrameLayout>
</layout>
